test: overhaul module unit tests
Rewrite broad module test coverage with deterministic fixtures, stronger assertions, and bounded concurrency diagnostics. Fix production issues exposed by the rewritten tests around sharding equality, time control, generator state isolation, and Activiti auto-configuration.